argocd/k3s/apps/application/envoy_ai_gw/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy-ai-gateway
  namespace: envoy-ai-gateway-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: mcp.lapis-dev.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: envoy-ai-gateway-80
                port:
                  number: 80
